web_crawler: resolve some error when running final test
Signed-off-by: duynq2002 <duyhtvbhp@gmail.com>